home_screen.css
html { 
  overflow-y: scroll; 
}
/* The sidebar menu */
.sidenav {
    height: 100%; /* Full-height: remove this if you want "auto" height */
    width: 20%; /* Set the width of the sidebar */
    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
    z-index: 1; /* Stay on top */
    top: 0; /* Stay at the top */
    left: 0;
    background-color: #0E0B16; /* Black */
    overflow-x: hidden; /* Disable horizontal scroll */
    overflow-y: auto;
    border-right: 1px solid #7E5DF9;
    min-height: fit-content;
  }
  
  /* The navigation menu links */
  .sidenav a {
    text-decoration: none;
    font-size: 1.2em;
    font-family: 'Chakra Petch', sans-serif, '300';
    color: #7E5DF9;
    display: block;
    line-height: 1.3em;
  }
  
  
  /* Style page content */
  .main {
    margin-left: 20%; /* Same as the width of the sidebar */
    padding: 0px 0px;
    top: 0%;
    bottom: 0%;
    overflow-y: scroll;
  }
  
  /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
  @media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 1em;}
  }

  .jonas_headshot{
    margin-top: 40px;
    text-align: center;
  }

  .headshot{
    height: 15%;
    width: 70%;
    border-radius: 50%;
    border: 3px solid #7E5DF9; 
  }

  h1{
    font-family: 'Chakra Petch', sans-serif, '700';
    text-align: center;
    font-size: 2.5em;
    color: #7E5DF9;
    margin-top: .125em;
    margin-bottom:.125em;
  }

  .job{
    font-family: 'Chakra Petch', sans-serif, '300';
    text-align: center;
    font-size: 1em;
    color: #E7DFDD;
    margin-top: 0px;
    margin-bottom: 0px;
  }

  .main_menu{
    position: absolute;
    bottom: 0px;
    left: 0px;
    right: 0px;
    text-align: center;
    font-size: 1.5em;
  }


  body{
      background-color: #0E0B16;
      position: absolute;
      overflow-y: scroll;
  }

  .hi{
    font-family: 'Chakra Petch', sans-serif, '700';
    text-align: center;
    font-size: 4em;
    color: #E7DFDD;
    position: fixed;
    top: 20%;
    left: 27%;
  }

  .introduction_text{
    font-family: 'Chakra Petch', sans-serif, '300';
    text-align: left;
    font-size: 1.8em;
    color: #E7DFDD;
    position: fixed;
    top: 35%;
    left: 32%;
  }

  h2{
    font-family: 'Chakra Petch', sans-serif, '700';
    text-align: center;
    font-size: 4em;
    color: #E7DFDD;
    position: fixed;
    top: 2%;
    left: 25%;
    margin: 0%;
    z-index: 1;
  }

  .vector_image{
    position: fixed; 
    bottom: 0%; 
    right: 0%;
    height: 40%;
    width: 20%;
  }

  .language{
    margin-top: 10px;
    width: 100%;
  }

  .language a{
    display:inline;
  }

  .portuguese, .english{
    height: 8%;
    width: 12%;
  }

  .content_contact_page{
    font-family: 'Chakra Petch', sans-serif, '300';
    width: 65%;
    height: 75%;
    text-align: justify;
    font-size: 1.25em;
    color: #E7DFDD;
    position: fixed;
    top: 20%;
    left: 25%;
    overflow: auto;
  }

  
  .contact_links{
    position: fixed;
    margin-top: 0.5em;
  }

  .contact_links a{
      text-decoration: none;
      font-size: 1.25em;
      font-family: 'Chakra Petch', sans-serif, '300';
      color: #7E5DF9;
      display: block;
      line-height: 2em;
  }

  .email_icon, .github_icon, .linkedin_icon{
    height: 8%;
    width: 8%;
    float: left; 
    margin-right: 10px;
    
  }

  .content_about_page{
    font-family: 'Chakra Petch', sans-serif, '300';
    width: 65%;
    height: 75%;
    text-align: justify;
    font-size: 1.25em;
    color: #E7DFDD;
    position: fixed;
    top: 12%;
    left: 25%;
    overflow:auto;
  }

  .resume_link{
    text-decoration: none;
    color: #7E5DF9;
  }

  .item_content{
    font-family: 'Chakra Petch', sans-serif, '300';
    width: 65%;
    position:fixed;
    text-align: justify;
    font-size: 1.25em;
    color: #E7DFDD;
    top: 12%;
    bottom: 0;
    left: 25%;
  }

  h3{
    text-decoration: none;
    font-size: 1.5em;
    font-family: 'Chakra Petch', sans-serif, '300';
    color: #7E5DF9;
    display: block;
    top: 10%;
    left: 25%;
    margin-block-end: 0em;
    margin-block-start: 50px;
  }

  .about_item_contents{
    margin-block-end: 0;
    margin-block-start: 50px;
  }

  .item_image{
    float: left;
    height: 20%;
    width: 20%;
    margin-right: 20px;
    border-radius: 20px;
    border: 3px solid #7E5DF9; 

  }

  

  

